cmake_minimum_required(VERSION 3.28)
project(Rutgers_ECE_451_NetworkCentricProgramming)

set(CMAKE_CXX_STANDARD 23)

add_executable(S01_In_Class_Primes sessions/01/inclass/primes.cpp)
add_executable(S01_In_Class_SaveWebP sessions/01/inclass/savewebp.cpp)
add_executable(S01_WriteImg sessions/01/writeimg.cpp)
